--- a/Projeto Formularios com HTML/html/index.html
+++ b/Projeto Formularios com HTML/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade -->
     <title>Formulário de vendas</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
